[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/SQUARE.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/PlayArea/GUI/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0001.png" type="Texture" id=4]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0002.png" type="Texture" id=5]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0011.png" type="Texture" id=6]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0012.png" type="Texture" id=7]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0013.png" type="Texture" id=8]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0014.png" type="Texture" id=9]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0015.png" type="Texture" id=10]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0016.png" type="Texture" id=11]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0017.png" type="Texture" id=12]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0018.png" type="Texture" id=13]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0019.png" type="Texture" id=14]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0020.png" type="Texture" id=15]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0003.png" type="Texture" id=16]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0021.png" type="Texture" id=17]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0022.png" type="Texture" id=18]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0023.png" type="Texture" id=19]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0024.png" type="Texture" id=20]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0025.png" type="Texture" id=21]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0026.png" type="Texture" id=22]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0027.png" type="Texture" id=23]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0028.png" type="Texture" id=24]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0029.png" type="Texture" id=25]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0030.png" type="Texture" id=26]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0004.png" type="Texture" id=27]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0031.png" type="Texture" id=28]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0032.png" type="Texture" id=29]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0005.png" type="Texture" id=30]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0006.png" type="Texture" id=31]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0007.png" type="Texture" id=32]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0008.png" type="Texture" id=33]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0009.png" type="Texture" id=34]
[ext_resource path="res://Effects/Pulse/Pulse_Sprites/0010.png" type="Texture" id=35]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 40
fps = 32.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 16 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 27 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 30 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 31 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 32 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 33 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 34 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 35 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 6 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 7 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 8 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 9 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 10 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 11 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 12 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 13 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 14 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 15 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 17 )
frame_20/delay_sec = 0.0
frame_21/texture = ExtResource( 18 )
frame_21/delay_sec = 0.0
frame_22/texture = ExtResource( 19 )
frame_22/delay_sec = 0.0
frame_23/texture = ExtResource( 20 )
frame_23/delay_sec = 0.0
frame_24/texture = ExtResource( 21 )
frame_24/delay_sec = 0.0
frame_25/texture = ExtResource( 22 )
frame_25/delay_sec = 0.0
frame_26/texture = ExtResource( 23 )
frame_26/delay_sec = 0.0
frame_27/texture = ExtResource( 24 )
frame_27/delay_sec = 0.0
frame_28/texture = ExtResource( 25 )
frame_28/delay_sec = 0.0
frame_29/texture = ExtResource( 26 )
frame_29/delay_sec = 0.0
frame_30/texture = ExtResource( 28 )
frame_30/delay_sec = 0.0
frame_31/texture = ExtResource( 29 )
frame_31/delay_sec = 0.0
frame_32/delay_sec = 0.0
frame_33/delay_sec = 0.0
frame_34/delay_sec = 0.0
frame_35/delay_sec = 0.0
frame_36/delay_sec = 0.0
frame_37/delay_sec = 0.0
frame_38/delay_sec = 0.0
frame_39/delay_sec = 0.0

[sub_resource type="Animation" id=3]
resource_name = "Transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Tutorial" type="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -200.0
margin_right = 39.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 8.0
margin_right = -64.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 1 )
text = "Hello and thank you for buying our latest Ultrasound based Floating Object."
autowrap = true

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -86.0
margin_right = -72.0
margin_bottom = -24.0
text = "Next"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 787.822
margin_top = -242.662
margin_right = 1028.82
margin_bottom = -1.66248
texture = SubResource( 2 )
expand = true

[node name="Node" type="Node" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="Node"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 3 )
[connection signal="dialog_complete" from="." to="." method="_on_Tutorial_dialog_complete"]
[connection signal="dialog_progressed" from="." to="." method="_on_Tutorial_dialog_progressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
